--- a/index.html
+++ b/index.html
@@ -11,16 +11,37 @@
 </head>
 
 <body>
+  <div class="grid-container">
+    <header>
+      <a href="#">Test Website</a>
 
-  <h1>
-    CSS GRID Testing
-  </h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque odio aliquam nobis debitis, ab corporis fuga
-    molestiae laudantium repellendus aut cumque unde ipsum saepe eius provident cupiditate sequi aspernatur animi
-    excepturi? Quidem nulla sequi unde laborum libero accusamus id deserunt incidunt, ab aliquid sit voluptates quae
-    veritatis laudantium, dolor assumenda?</p>
+    <main>
+      <article>
+        <h1>
+          CSS GRID Testing
+        </h1>
 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque odio aliquam nobis debitis, ab corporis fuga
+          molestiae laudantium repellendus aut cumque unde ipsum saepe eius provident cupiditate sequi aspernatur animi
+          excepturi? Quidem nulla sequi unde laborum libero accusamus id deserunt incidunt, ab aliquid sit voluptates
+          quae
+          veritatis laudantium, dolor assumenda?</p>
+      </article>
+    </main>
+
+    <footer>
+
+    </footer>
+  </div><!-- /.grid-container -->
 
   <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.27.5'><\/script>".replace("HOST", location.hostname));
