Add responsiveness to columns sections.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS GRID Testing</title>
+  <title>CSS Education</title>
   <link href="style.css" rel="stylesheet">
   </link>
 </head>
@@ -13,33 +13,96 @@
 <body>
   <div class="grid-container">
     <header>
-      <a href="#">Test Website</a>
+      <div class="inner">
+        <a class="logo" href="#">My CSS Site</a>
 
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div><!-- /.inner -->
     </header>
 
     <main>
-      <article>
-        <h1>
-          CSS GRID Testing
-        </h1>
+      <div class="inner">
+        <article>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nisi quia aspernatur quod. Fugit
+            reprehenderit optio nostrum, facere possimus similique expedita sit quas! Suscipit, ea perferendis,
+            molestias ipsam repudiandae repellat voluptates ab necessitatibus laborum pariatur incidunt temporibus
+            accusantium fuga quasi voluptas quam consequatur tenetur cupiditate eligendi aut sint. At minus aspernatur
+            voluptatibus veritatis quidem natus enim accusantium voluptatum. Necessitatibus voluptas, neque quia eaque,
+            ut assumenda quo ullam illum voluptates veniam, nulla exercitationem architecto. Dolorem consequuntur maxime
+            quam reprehenderit iusto voluptatum? Blanditiis nam ullam tempore et dignissimos quasi sequi, iusto, cumque
+            eligendi nesciunt tempora atque quam nulla architecto molestiae dolores a.</p>
+          <section class="grid-demo">
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque odio aliquam nobis debitis, ab corporis fuga
-          molestiae laudantium repellendus aut cumque unde ipsum saepe eius provident cupiditate sequi aspernatur animi
-          excepturi? Quidem nulla sequi unde laborum libero accusamus id deserunt incidunt, ab aliquid sit voluptates
-          quae
-          veritatis laudantium, dolor assumenda?</p>
-      </article>
+            <h2>Three Columns</h2>
+            <div class="columns three-col">
+              <div class="col">
+                <h3>1.) Lorem ipsum dolor</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque dolore quasi perferendis
+                  ullam officia aspernatur quae placeat nisi accusamus!</p>
+              </div>
+              <div class="col">
+                <h3>2.) Debitis cum voluptatem</h3>
+                <p>Debitis cum voluptatem, veritatis odit ea est quia dolorum molestias aliquid provident dicta animi
+                  quis
+                  veniam porro et laboriosam? Quam.</p>
+              </div>
+              <div class="col">
+                <h3>3.) Tempore nesciunt voluptatum</h3>
+                <p>Tempore nesciunt voluptatum deserunt laboriosam nam fuga provident eveniet inventore? Sed nisi
+                  molestias porro, alias beatae a illum accusamus veritatis?</p>
+              </div>
+            </div>
+
+            <h2>Five Columns</h2>
+            <div class="columns five-col">
+              <div class="col">
+                <h3>1.) Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae impedit eligendi, reprehenderit sunt
+                  nisi omnis eaque harum voluptatibus, dolorum qui alias! Sunt numquam explicabo beatae voluptate veniam
+                  animi obcaecati ipsa, quae pariatur deserunt impedit. Sapiente reprehenderit, ratione, ipsam voluptas
+                  autem voluptates quisquam nisi, delectus exercitationem ad tenetur minima praesentium rem?</p>
+              </div>
+              <div class="col">
+                <h3>2.) Modi dolorum</h3>
+                Modi dolorum qui amet nulla saepe ipsum nihil minus, sequi animi dicta obcaecati ea ipsam. Illo sunt
+                repellendus ea maxime?
+              </div>
+              <div class="col">
+                <h3>3.) Harum odit</h3>
+                Harum odit quo libero consectetur sint aperiam rerum, fuga commodi. Vel, earum dolores excepturi
+                blanditiis similique porro quae hic debitis?
+              </div>
+              <div class="col">
+                <h3>4.)Amet blanditiis</h3>
+                Amet blanditiis porro obcaecati accusamus recusandae ut architecto! Debitis saepe ab rerum reprehenderit
+                obcaecati error laboriosam doloribus. Possimus, tempore nulla?
+              </div>
+              <div class="col">
+                <h3>5.) Tempora laudantium</h3>
+                Tempora laudantium culpa est minus possimus modi quisquam dicta iste, numquam repellendus natus neque
+                autem perferendis ad sequi assumenda magnam.
+              </div>
+            </div>
+          </section><!-- /.grid-demo -->
+        </article>
+      </div><!-- /.inner -->
+
+      <div class="full">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto veniam doloremque at velit optio dolorum aut
+          consectetur nisi facere, ullam aliquam ad nobis debitis reiciendis. Laudantium reiciendis quam maiores
+          inventore architecto voluptate voluptatum delectus id, esse quas. Explicabo quibusdam sapiente omnis maiores
+          minus, numquam dolorum, odit possimus, ut perferendis in?</p>
+      </div>
     </main>
 
     <footer>
-
+      <p><a href="#">TestWebsite.com</a></p>
     </footer>
   </div><!-- /.grid-container -->
 
